--- a/django_backend/templates/index.html
+++ b/django_backend/templates/index.html
@@ -1,4 +1,3 @@
-{% load django_vite %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,14 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    {% vite_hmr_client %}
-    {% vite_asset 'js/main.jsx' %}
-
-    <title>Django Vite Example</title>
+    <title>EpicTipBot</title>
   </head>
 
   <body>
-    <div id="root"></div>
-    createWallet()
+  Working!
   </body>
 </html>
